name:                timeless-SDL
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/carldong/timeless-SDL#readme
license:             BSD3
license-file:        LICENSE
author:              Rongcui Dong
maintainer:          karl_1702@188.com
copyright:           BSD3
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     FRP.Timeless.Framework.SDL
  other-modules: FRP.Timeless.Framework.UI.Scene
               , FRP.Timeless.Framework.UI.Components
               , FRP.Timeless.Framework.UI.Events
  build-depends:       base >= 4.7 && < 5
                     , timeless
                     , sdl2 >= 2.0.0
                     , sdl2-ttf
                     , linear
  default-language:    Haskell2010
  default-extensions:
                     OverloadedStrings
                     Arrows
                     TypeSynonymInstances
                     FlexibleInstances
                     RankNTypes
                     MultiParamTypeClasses

executable app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timeless-SDL
  default-language:    Haskell2010

test-suite timeless-SDL-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timeless-SDL
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/carldong/timeless-SDL
